--- a/index.html
+++ b/index.html
@@ -1,46 +1,146 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Typemaster pre-launch landing page</title>
-</head>
-<body>
-  <!--  
-  Pre-order now
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./assets/favicon-32x32.png"
+    />
+    <link rel="stylesheet" href="style.css" />
+    <title>Frontend Mentor | Typemaster pre-launch landing page</title>
+  </head>
+  <body>
+    <header class="container">
+      <img src="/assets/shared/logo.svg" alt="Typemaster" />
+      <button class="button">Pre-order now</button>
+    </header>
 
-  Typemaster keyboard
+    <main>
+      <section class="hero | container">
+        <div class="hero__wrapper | container">
+          <div class="hero__content">
+            <h1 class="primary-heading">Typemaster keyboard</h1>
+            <p>
+              Improve your productivity and gaming without breaking the bank.
+              Upgrade to a high quality mechanical typing experience.
+            </p>
+            <button class="button">Pre-order now</button>
+          </div>
+          <picture>
+            <source
+              srcset="./assets/mobile/image-keyboard.jpg"
+              media="(max-width: 375px)"
+            />
 
-  Improve your productivity and gaming without breaking the bank. Upgrade to a high quality 
-  mechanical typing experience.
+            <source
+              srcset="./assets/tablet/image-keyboard.jpg"
+              media="(max-width: 768px)"
+            />
 
-  Pre-order now
+            <img src="./assets/desktop/image-keyboard.jpg" alt="" />
+          </picture>
+        </div>
+      </section>
+      <section class="product-description">
+        <div class="product-description__wrapper | container">
+          <div>
+            <picture>
+              <source
+                srcset="./assets/mobile/image-phone-and-keyboard.jpg"
+                media="(max-width: 375px)"
+              />
+
+              <source
+                srcset="./assets/tablet/image-phone-and-keyboard.jpg"
+                media="(max-width: 768px)"
+              />
+
+              <img src="./assets/desktop/image-phone-and-keyboard.jpg" alt="" />
+            </picture>
+          </div>
+          <div>
+            <picture>
+              <source
+                srcset="./assets/mobile/image-glass-and-keyboard.jpg"
+                media="(max-width: 375px)"
+              />
+
+              <source
+                srcset="./assets/tablet/image-glass-and-keyboard.jpg"
+                media="(max-width: 768px)"
+              />
+
+              <img src="./assets/desktop/image-glass-and-keyboard.jpg" alt="" />
+            </picture>
+          </div>
+          <div>
+            <h2 class="secondary-heading">Mechanical wireless keyboard</h2>
+            <p>
+              The Typemaster keyboard boasts top-notch build and practical
+              design. It offers a wide variety of switches and keycaps, along
+              with reliable wireless connectivity.
+            </p>
+          </div>
+        </div>
+      </section>
+      <section class="container">
+        <h2>Features</h2>
+        <ul>
+          <li>
+            <div class="logo-wrapper">
+              <img src="./assets/shared/icon-light.svg" alt="" />
+            </div>
+            <h3 class="tertiary-heading">Highly compatible</h3>
+            <p>
+              Easy to use and works well with all major computer brands, gaming
+              consoles and mobile devices. Plug & play, no installation or
+              driver needed.
+            </p>
+          </li>
+          <li>
+            <div class="logo-wrapper">
+              <img src="./assets/shared/icon-light.svg" alt="" />
+            </div>
+            <h3 class="tertiary-heading">Wireless with bluetooth</h3>
+            <p>
+              Powerful 2.4G RF technology allows you to connect the cordless
+              keyboard from up to 30ft away. Simply plug the unifying receiver
+              into your computer.
+            </p>
+          </li>
+          <li>
+            <div class="logo-wrapper">
+              <img src="./assets/shared/icon-light.svg" alt="" />
+            </div>
+            <h3 class="tertiary-heading">High capacity battery</h3>
+            <p>
+              Equipped with a long-lasting built-in battery, you’ll never have
+              to spend a dime on replaceable ones.  Enjoy 40 hours of usage time
+              between charges.
+            </p>
+          </li>
+          <li>
+            <div class="logo-wrapper">
+              <img src="./assets/shared/icon-light.svg" alt="" />
+            </div>
+            <h3 class="tertiary-heading">RGB backlit modes</h3>
+            <p>
+              Choose from 4 backlight brightness levels and adjustable breathing
+              speed. Each key glows intensely in the dark and helps you type in
+              low light conditions.
+            </p>
+          </li>
+        </ul>
+      </section>
+    </main>
+    <footer class="container">
+      <p>Typemaster 2021 | All Rights Reserved</p>
+    </footer>
+    <!--  
   Release on 5/27
-
-  Mechanical wireless keyboard
-  The Typemaster keyboard boasts top-notch build and practical design. It offers a wide variety 
-  of switches and keycaps, along with reliable wireless connectivity.
-
-  Highly compatible
-  Easy to use and works well with all major computer brands, gaming consoles and mobile devices. 
-  Plug & play, no installation or driver needed.
-
-  Wireless with bluetooth
-  Powerful 2.4G RF technology allows you to connect the cordless keyboard from up to 30ft away. 
-  Simply plug the unifying receiver into your computer.
-
-  High capacity battery
-  Equipped with a long-lasting built-in battery, you’ll never have to spend a dime on replaceable ones. 
-  Enjoy 40 hours of usage time between charges.
-
-  RGB backlit modes
-  Choose from 4 backlight brightness levels and adjustable breathing speed. Each key glows intensely in the dark and helps
-  you type in low light conditions.
-
-  Typemaster 2021 | All Rights Reserved
-  -->
-</body>
+  --></body>
 </html>
