refactured the products section

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
               />
             </picture>
           </div>
-          <div>
+          <div class="product-description__image2">
             <picture class="image-wrapper">
               <source
                 srcset="./assets/mobile/image-glass-and-keyboard.jpg"
@@ -92,9 +92,11 @@
               />
             </picture>
           </div>
-          <div>
-            <h2 class="secondary-heading">Mechanical wireless keyboard</h2>
-            <p>
+          <div class="product-description__content">
+            <h2 class="product-description__heading | secondary-heading">
+              Mechanical wireless keyboard
+            </h2>
+            <p class="product-description__description">
               The Typemaster keyboard boasts top-notch build and practical
               design. It offers a wide variety of switches and keycaps, along
               with reliable wireless connectivity.
