refactored features section

--- a/index.html
+++ b/index.html
@@ -111,7 +111,9 @@
             <div class="logo-wrapper">
               <img src="./assets/shared/icon-light.svg" alt="" />
             </div>
-            <h3 class="tertiary-heading">Highly compatible</h3>
+            <h3 class="features__list-headings | tertiary-heading">
+              Highly compatible
+            </h3>
             <p>
               Easy to use and works well with all major computer brands, gaming
               consoles and mobile devices. Plug & play, no installation or
@@ -122,7 +124,9 @@
             <div class="logo-wrapper">
               <img src="./assets/shared/icon-light.svg" alt="" />
             </div>
-            <h3 class="tertiary-heading">Wireless with bluetooth</h3>
+            <h3 class="features__list-headings | tertiary-heading">
+              Wireless with bluetooth
+            </h3>
             <p>
               Powerful 2.4G RF technology allows you to connect the cordless
               keyboard from up to 30ft away. Simply plug the unifying receiver
@@ -133,7 +137,9 @@
             <div class="logo-wrapper">
               <img src="./assets/shared/icon-light.svg" alt="" />
             </div>
-            <h3 class="tertiary-heading">High capacity battery</h3>
+            <h3 class="features__list-headings | tertiary-heading">
+              High capacity battery
+            </h3>
             <p>
               Equipped with a long-lasting built-in battery, you’ll never have
               to spend a dime on replaceable ones.  Enjoy 40 hours of usage time
@@ -144,7 +150,9 @@
             <div class="logo-wrapper">
               <img src="./assets/shared/icon-light.svg" alt="" />
             </div>
-            <h3 class="tertiary-heading">RGB backlit modes</h3>
+            <h3 class="features__list-headings | tertiary-heading">
+              RGB backlit modes
+            </h3>
             <p>
               Choose from 4 backlight brightness levels and adjustable breathing
               speed. Each key glows intensely in the dark and helps you type in
@@ -155,7 +163,9 @@
       </section>
     </main>
     <footer class="footer | container">
-      <p>Typemaster 2021 | All Rights Reserved</p>
+      <p>
+        <span class="text-bold">Typemaster 2021</span> | All Rights Reserved
+      </p>
     </footer>
   </body>
 </html>
